Report data-table overflow problem fixed.

--- a/invoice-frontend/src/app/pages/components/reports/reports.component.scss
+++ b/invoice-frontend/src/app/pages/components/reports/reports.component.scss
@@ -71,3 +71,9 @@
  .pendingcss {
      color: hsl(19, 94%, 55%)
  }
+
+
+ .table-responsive {
+     overflow-x: unset !important;
+     margin-bottom: 50PX !important;
+ }
